<?xml version="1.0"?>
<package format="2">
  <name>cirkit_unit03_base</name>
  <version>0.0.1</version>
  <description>The cirkit_unit03_base package</description>

  <maintainer email="k104009y@mail.kyutech.jp">Arita Yuta</maintainer>

  <license>BSD</license>

  <author email="cirkit.information@gmail.com">CIR-KIT</author>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>

</package>
