<?xml version="1.0"?>
<package format="2">
  <name>cirkit_unit03_bringup</name>
  <version>0.1.0</version>
  <description>The cirkit_unit03_bringup package</description>

  <maintainer email="k104009y@mail.kyutech.jp">Arita Yuta</maintainer>
  <license>MIT</license>
  <url type="repository">https://github.com/CIR-KIT-Unit03/cirkit_unit03_robot/tree/master/cirkit_unit03_bringup</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cirkit_unit03_driver</exec_depend>
  <exec_depend>cirkit_unit03_description</exec_depend>
  <exec_depend>cirkit_unit03_merge_laser</exec_depend>
  <exec_depend>cirkit_unit03_desktop</exec_depend>

  <export>
  </export>
</package>
