<?xml version="1.0"?>
<package format="2">
  <name>cirkit_unit03_bringup</name>
  <version>0.1.0</version>
  <description>The cirkit_unit03_bringup package</description>

  <maintainer email="k104009y@mail.kyutech.jp">Arita Yuta</maintainer>
  <maintainer email="o111027y@mail.kyutech.jp">Doi Yusuke</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/CIR-KIT-Unit03/cirkit_unit03_robot.git</url>
  <url type="bugtracker">https://github.com/CIR-KIT-Unit03/cirkit_unit03_robot/issues</url>
  <author email="cirkit.infomation@gmail.com">CIR-KIT</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cirkit_unit03_control</exec_depend>
  <exec_depend>cirkit_unit03_driver</exec_depend>
  <exec_depend>cirkit_unit03_description</exec_depend>
  <exec_depend>hokuyo_node</exec_depend>
  <exec_depend>hokuyo3d</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <export>
  </export>
</package>
